--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
     "@testing-library/jest-dom": "5.11.5",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "axios": "0.21.0",
+    "connected-react-router": "6.8.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "17.0.1",
+    "react-error-boundary": "3.0.2",
+    "react-redux": "7.2.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
+    "react-shadow": "18.4.2",
+    "redux": "4.0.5",
+    "redux-actions": "2.6.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-saga": "1.1.3",
+    "styled-components": "5.2.1",
     "web-vitals": "0.2.4"
   },
   "scripts": {
@@ -21,8 +32,14 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
-    ]
+      "prettier"
+    ],
+    "rules": {
+      "semi": [
+        "error",
+        "always"
+      ]
+    }
   },
   "browserslist": {
     "production": [
@@ -35,5 +52,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**.*/js?(x)": [
+      "eslint --fix",
+      "prettier --write",
+      "gid add"
+    ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "6.15.0",
+    "husky": "4.3.0",
+    "lint-staged": "10.5.1",
+    "prettier": "2.1.2"
   }
 }
