--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
     "axios": "0.21.0",
+    "bootstrap": "4.5.3",
     "connected-react-router": "6.8.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
     "react-error-boundary": "3.0.2",
     "react-redux": "7.2.2",
