--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "workroom-front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3031",
   "dependencies": {
     "@testing-library/jest-dom": "5.11.5",
     "@testing-library/react": "11.1.0",
